syntax = "proto3";

package order.v1;

option java_multiple_files = true;
option java_package = "com.serendibmall.order.v1";
option java_outer_classname = "OrderProto";

service OrderService {
  // Create a new order
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
}
